--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -47,6 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asesor\frmAsesor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Asesor\frmAsesor.Designer.cs">
+      <DependentUpon>frmAsesor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Asesor\frmBuscarAsesor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Asesor\frmBuscarAsesor.Designer.cs">
+      <DependentUpon>frmBuscarAsesor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cursos\AgregarMaterial\frmAgregarMaterial.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +164,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Asesor\frmAsesor.resx">
+      <DependentUpon>frmAsesor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Asesor\frmBuscarAsesor.resx">
+      <DependentUpon>frmBuscarAsesor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Cursos\AgregarMaterial\frmAgregarMaterial.resx">
       <DependentUpon>frmAgregarMaterial.cs</DependentUpon>
     </EmbeddedResource>
@@ -298,5 +316,6 @@
   <ItemGroup>
     <None Include="Resources\address-book.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
