--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -47,6 +47,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Eventos\frmCrearComentario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Eventos\frmCrearComentario.Designer.cs">
+      <DependentUpon>frmCrearComentario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Eventos\frmCrearPostGeneral.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Eventos\frmCrearPostGeneral.Designer.cs">
+      <DependentUpon>frmCrearPostGeneral.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Eventos\frmVerEventos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Eventos\frmVerEventos.Designer.cs">
+      <DependentUpon>frmVerEventos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Eventos\frmHomePage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Eventos\frmHomePage.Designer.cs">
+      <DependentUpon>frmHomePage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Eventos\frmPostEvento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Eventos\frmPostEvento.Designer.cs">
+      <DependentUpon>frmPostEvento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Eventos\frmTendenciaMaterial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Eventos\frmTendenciaMaterial.Designer.cs">
+      <DependentUpon>frmTendenciaMaterial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Home\frmHome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +109,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Eventos\frmCrearComentario.resx">
+      <DependentUpon>frmCrearComentario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Eventos\frmCrearPostGeneral.resx">
+      <DependentUpon>frmCrearPostGeneral.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Eventos\frmVerEventos.resx">
+      <DependentUpon>frmVerEventos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Eventos\frmHomePage.resx">
+      <DependentUpon>frmHomePage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Eventos\frmPostEvento.resx">
+      <DependentUpon>frmPostEvento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Eventos\frmTendenciaMaterial.resx">
+      <DependentUpon>frmTendenciaMaterial.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Home\frmHome.resx">
       <DependentUpon>frmHome.cs</DependentUpon>
     </EmbeddedResource>
@@ -146,6 +200,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\bubble.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\picture.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dowload.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\like.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\chat-de-burbujas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\anadir-evento.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\filtrar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\filtrar %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
