--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -193,6 +193,12 @@
     <Compile Include="Home\frmLoginSingin.Designer.cs">
       <DependentUpon>frmLoginSingin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Home\frmPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Home\frmPrincipal.Designer.cs">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Home\frmSignIn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -234,12 +240,6 @@
     </Compile>
     <Compile Include="Perfil\frmPerfil_Resenias.Designer.cs">
       <DependentUpon>frmPerfil_Resenias.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Profesor\frmEjemplo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Profesor\frmEjemplo.Designer.cs">
-      <DependentUpon>frmEjemplo.cs</DependentUpon>
     </Compile>
     <Compile Include="Profesor\frmProfesores.cs">
       <SubType>Form</SubType>
@@ -333,6 +333,9 @@
     <EmbeddedResource Include="Home\frmLoginSingin.resx">
       <DependentUpon>frmLoginSingin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Home\frmPrincipal.resx">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Home\frmSignIn.resx">
       <DependentUpon>frmSignIn.cs</DependentUpon>
     </EmbeddedResource>
@@ -353,9 +356,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Perfil\frmPerfil_Resenias.resx">
       <DependentUpon>frmPerfil_Resenias.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Profesor\frmEjemplo.resx">
-      <DependentUpon>frmEjemplo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Profesor\frmProfesores.resx">
       <DependentUpon>frmProfesores.cs</DependentUpon>
