--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -241,6 +241,12 @@
     <Compile Include="Notificaciones\frmNotificaciones.Designer.cs">
       <DependentUpon>frmNotificaciones.cs</DependentUpon>
     </Compile>
+    <Compile Include="Perfil\frmCrearResenia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Perfil\frmCrearResenia.Designer.cs">
+      <DependentUpon>frmCrearResenia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Perfil\frmPerfil_CursosAsesorados.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -392,6 +398,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Notificaciones\frmNotificaciones.resx">
       <DependentUpon>frmNotificaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Perfil\frmCrearResenia.resx">
+      <DependentUpon>frmCrearResenia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Perfil\frmPerfil.resx">
       <DependentUpon>frmPerfil.cs</DependentUpon>
