Pequeña conección exitosa

--- a/LP2Soft/App.config
+++ b/LP2Soft/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="UsuariosWSPortBinding" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8080/LP2Soft_WebServices/UsuariosWS"
+                binding="basicHttpBinding" bindingConfiguration="UsuariosWSPortBinding"
+                contract="UsuarioWS.UsuariosWS" name="UsuariosWSPort" />
+        </client>
+    </system.serviceModel>
 </configuration>
